# he5py

./: CMakeLists.txt  README.md  Using he5py.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml
he5py/src/: CMakeLists.txt
