[build-system]
requires = ["setuptools", "wheel", "pybind11", "scikit-build", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "he5py"
version = "1.0.0"
description = "Utilities for working with the HDF-EOS-5 remote sensing data format"
authors = [
    { name = "Gregory H. Halverson" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "colored-logging",
    "numpy",
    "h5py",
    "rasters"
]

[tool.setuptools]
packages = ["he5py"]

[tool.scikit-build]
cmake-with-sdist = true